package file;

message Files {
	repeated File files = 1;
}

message File {
	required string file_name = 1;
	optional int32 file_num = 2 [default = 1];
}
