package login;

message Login {
	required string id = 1;
	required string passwd = 2;
}

message DeleteInfo {
	required string id = 1;
	required string passwd = 2;
}
