package port;

message Port {
	required int32 port_num = 1;
	required string ip = 2;
}

